src/test/deca/syntax/valid/HelloWorld/Main2-EmptyBlock.deca
// Description:
//    tests de programme vide.
//
// Resultats:
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    created on 05/01/2022

{
}
