src/test/deca/syntax/invalid/HelloWorld/missing_semicolon.deca
// Description:
//    tests de programme lexicalement incorrect.
//
// Resultats:
//    Ligne 13 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 05/01/2022

{
println("Hello")
}
